sfdx-source/main/default/objects/PC_Specialist_Unavailability__c/fields/FLP_Current_Location__c.field-meta.xml
<CustomField>
    <fullName>FLP_Current_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track the location of the FLP for the given Case record</description>
    <inlineHelpText>This field is automatically populated with the FLP&apos;s location when the unavailability (miss) button is selected.</inlineHelpText>
    <label>FLP Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>PrC Specialist Unavailabilities</relationshipLabel>
    <relationshipName>PrC_Specialist_Unavailabilities</relationshipName>
    <type>Lookup</type>
</CustomField>