sfdx-source/main/default/objects/PC_Specialist_Unavailability__c/fields/PC_Specialty__c.field-meta.xml
<CustomField>
    <fullName>PC_Specialty__c</fullName>
    <description>Picklist to denote the specialty.</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PC_Specialties</valueSetName>
    </valueSet>
</CustomField>