sfdx-source/main/default/objects/PC_Specialist_Unavailability__c/fields/PC_VISN__c.field-meta.xml
<CustomField>
    <fullName>PC_VISN__c</fullName>
    <description>Capture the VISN#</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>